Finished front end for profile page. Fixed navbar issue by shifting the css of accountnavbar to layoutdiscover

--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -12,10 +12,6 @@ h2{
     margin:0;
 }
 
-.dashboard-nav-option{
-    color: var(--color) !important; 
-}
-
 .dashboard-content{
     display:grid;
     grid-template-columns: 1fr 1fr;
